<!--
  ~ Copyright (C) 2022 The N's lab Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name" translatable="false">Time Eat</string>

    <string name="category_today" translatable="false">Today</string>
    <string name="category_timetable" translatable="false">Timetable</string>
    <string name="category_all" translatable="false">All</string>

    <!-- common -->
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="common_tag_empty">스케줄에 지정된 태그가 없습니다.</string>
    <string name="open_link">링크 열기</string>
    <string name="open_link_default_error">실행할 수 없는 링크입니다.</string>
    <string name="delete">삭제</string>
    <string name="handle_drag">드래그 시작</string>
    <string name="unknown_error">알 수 없는 오류가 발생했습니다.</string>

    <!-- schedule -->
    <string name="schedule_complete_checkbox_contentDescription" formatted="true">%1$s를 완료합니다.</string>
    <string name="schedule_complete_checkbox_undo_contentDescription" formatted="true">%1$s를 완료 취소합니다.</string>
    <string name="schedule_selection_checkbox_contentDescription" formatted="true">%1$s 를 선택합니다.</string>
    <string name="schedule_selection_checkbox_undo_contentDescription" formatted="true">%1$s 를 선택 취소합니다.</string>
    <string name="schedule_completed_shown">완료된 항목 보기</string>
    <string name="schedule_completed_hidden">완료된 항목 가리기</string>
    <string name="schedule_erase_all_if_completed">지우기</string>
    <string name="schedule_selection_mode_on">스케줄 선택</string>
    <string name="schedule_selection_mode_off">스케줄 선택해제</string>
    <string name="schedule_selected_item_complete">완료됨으로 표시</string>
    <string name="schedule_selected_item_incomplete">완료되지 않음으로 표시</string>

    <!-- tag -->
    <string name="format_tag" formatted="true" translatable="false">#%1$s</string>
    <string name="tag_rename">태그 이름 변경</string>
    <string name="tag_rename_clear">편집 중인 텍스트 초기화</string>
    <plurals name="tag_rename_dialog_description">
        <item quantity="other">#%1$s이(가) %2$d개의 알림에서 업데이트됩니다.</item>
    </plurals>
    <string name="tag_rename_dialog_description_overflow">#%1$s이(가) %2$d(+)개의 알림에서 업데이트됩니다.</string>
    <plurals name="tag_delete">
        <item quantity="other">%1$d개의 태그 삭제</item>
    </plurals>
    <string name="tag_delete_overflow">>%1$d(+)개의 태그 삭제</string>
    <plurals name="tag_delete_dialog_description">
        <item quantity="other">#%1$s이(가) %2$d개의 알림에서 사용되고 있습니다.</item>
    </plurals>
    <string name="tag_delete_dialog_description_overflow">#%1$s이(가) %2$d(+)개의 알림에서 사용되고 있습니다.</string>
    <string name="tag_not_exist">태그가 존재하지 않습니다.</string>

    <!-- home -->
    <string name="home_category_header">나의 할일</string>
    <string name="home_category_today">오늘</string>
    <string name="home_category_timetable">예정</string>
    <string name="home_category_all">전체</string>
    <string name="home_tag_header">나의 태그</string>
    <string name="home_push_on_label">시간 알림 on</string>
    <string name="home_push_off_label">시간 알림 off</string>
    <string name="new_schedule_label">새로운 플랜</string>

    <string name="home_tag_config_label_rename">Rename Tag</string>
    <string name="home_tag_config_label_delete">Delete Tag</string>
    <string name="home_tag_rename_edittext_hint">input tag</string>
    <string name="home_tag_rename_confirm">@string/ok</string>
    <string name="home_tag_rename_cancel">@string/cancel</string>
    <plurals name="home_tag_rename_text_label">
        <item quantity="one">#%1$s will be updated in %2$d reminder.</item>
        <item quantity="other">#%1$s will be updated in %2$d reminders.</item>
    </plurals>
    <string name="home_tag_delete_confirm">Delete</string>
    <string name="home_tag_delete_cancel">@string/cancel</string>
    <plurals name="home_tag_delete_text_label">
        <item quantity="one">#%1$s will be updated in %2$d reminder.</item>
        <item quantity="other">#%1$s will be updated in %2$d reminders.</item>
    </plurals>
</resources>