<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022 The N's lab Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingStart="15dp"
	android:paddingTop="15dp"
	android:paddingEnd="15dp"
	android:paddingBottom="30dp">

	<TextView
		android:id="@+id/textview_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/home_tag_config_label_delete"
		android:textColor="?attr/font_color_1"
		app:layout_constraintBottom_toTopOf="@id/description_textview"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/description_textview"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="20dp"
		android:textColor="?attr/font_color_1"
		app:layout_constraintBottom_toTopOf="@id/confirm_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/textview_title"
		tools:text="#Hello is used in 4 reminders" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/confirm_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/home_tag_delete_confirm"
		android:textAllCaps="false"
		app:layout_constraintBottom_toTopOf="@id/cancel_button"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/description_textview" />

	<androidx.appcompat.widget.AppCompatButton
		android:id="@+id/cancel_button"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:text="@string/home_tag_delete_cancel"
		android:textAllCaps="false"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/confirm_button" />

</androidx.constraintlayout.widget.ConstraintLayout>