<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022 The N's lab Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground">

    <Button
        android:id="@+id/button_completed_schedule_shown_toggle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_toolbar_height"
        app:layout_constraintBottom_toTopOf="@id/button_delete_all_if_completed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_selected_item_complete"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_toolbar_height"
        android:layout_marginStart="15dp"
        android:text="@string/schedule_selected_item_complete"
        app:layout_constraintStart_toEndOf="@id/button_completed_schedule_shown_toggle"
        app:layout_constraintTop_toTopOf="@id/button_completed_schedule_shown_toggle" />

    <Button
        android:id="@+id/button_delete_all_if_completed"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_toolbar_height"
        android:text="@string/schedule_erase_all_if_completed"
        app:layout_constraintBottom_toTopOf="@id/button_selection_mode_on_off"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_completed_schedule_shown_toggle" />

    <Button
        android:id="@+id/button_selected_item_incomplete"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_toolbar_height"
        android:layout_marginStart="15dp"
        android:text="@string/schedule_selected_item_incomplete"
        app:layout_constraintStart_toEndOf="@id/button_delete_all_if_completed"
        app:layout_constraintTop_toTopOf="@id/button_delete_all_if_completed" />

    <Button
        android:id="@+id/button_selection_mode_on_off"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_toolbar_height"
        app:layout_constraintBottom_toTopOf="@id/button_selected_item_deleted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_delete_all_if_completed" />

    <Button
        android:id="@+id/button_selected_item_deleted"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/default_toolbar_height"
        android:text="delete selected item (TODO text)"
        app:layout_constraintBottom_toTopOf="@id/recyclerview_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_selection_mode_on_off"
        tools:ignore="HardcodedText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_selected_item_deleted" />

</androidx.constraintlayout.widget.ConstraintLayout>