<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022 The N's lab Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:paddingTop="6.5dp"
    android:paddingBottom="52.5dp">

    <TextView
        android:id="@+id/textview_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_category_header"
        android:textColor="?attr/font_color_1"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textColor="@color/font_1_light" />

    <ImageButton
        android:id="@+id/btn_nav_today"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="6.5dp"
        android:background="@drawable/bg_card_color_1_rd_8"
        android:contentDescription="@string/home_category_today"
        android:foreground="?selectableItemBackground"
        app:layout_constraintDimensionRatio="1:1.625"
        app:layout_constraintEnd_toStartOf="@id/btn_nav_timetable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_header" />

    <ImageView
        android:id="@+id/imageview_logo_today"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/bg_home_category_logo_today"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_home_category_home"
        app:layout_constraintBottom_toTopOf="@id/textview_label_today"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_today"
        app:layout_constraintStart_toStartOf="@id/btn_nav_today"
        app:layout_constraintTop_toTopOf="@id/btn_nav_today"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="?attr/bg_1"
        tools:tint="@color/bg_1_light" />

    <TextView
        android:id="@+id/textview_label_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:text="@string/home_category_today"
        android:textColor="?attr/font_color_2"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/textview_count_today"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_today"
        app:layout_constraintStart_toStartOf="@id/btn_nav_today"
        app:layout_constraintTop_toBottomOf="@id/imageview_logo_today"
        tools:textColor="@color/font_2_light" />

    <TextView
        android:id="@+id/textview_count_today"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/dangam_asac"
        android:importantForAccessibility="no"
        android:text="@string/home_category_today"
        android:textColor="?attr/font_color_1"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_nav_today"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_today"
        app:layout_constraintStart_toStartOf="@id/btn_nav_today"
        app:layout_constraintTop_toBottomOf="@id/textview_label_today"
        tools:text="5"
        tools:textColor="@color/font_1_light" />

    <ImageButton
        android:id="@+id/btn_nav_timetable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6.5dp"
        android:background="@drawable/bg_card_color_1_rd_8"
        android:contentDescription="@string/home_category_timetable"
        android:foreground="?selectableItemBackground"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_nav_today"
        app:layout_constraintEnd_toStartOf="@id/btn_nav_all"
        app:layout_constraintStart_toEndOf="@id/btn_nav_today"
        app:layout_constraintTop_toTopOf="@id/btn_nav_today" />

    <ImageView
        android:id="@+id/imageview_logo_timetable"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/bg_home_category_logo_timetable"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_home_category_timetable"
        app:layout_constraintBottom_toTopOf="@id/textview_label_timetable"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_timetable"
        app:layout_constraintStart_toStartOf="@id/btn_nav_timetable"
        app:layout_constraintTop_toTopOf="@id/btn_nav_timetable"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="?attr/bg_1"
        tools:tint="@color/bg_1_light" />

    <TextView
        android:id="@+id/textview_label_timetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:text="@string/home_category_timetable"
        android:textColor="?attr/font_color_2"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/textview_count_timetable"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_timetable"
        app:layout_constraintStart_toStartOf="@id/btn_nav_timetable"
        app:layout_constraintTop_toBottomOf="@id/imageview_logo_timetable"
        tools:textColor="@color/font_2_light" />

    <TextView
        android:id="@+id/textview_count_timetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/dangam_asac"
        android:importantForAccessibility="no"
        android:text="@string/home_category_today"
        android:textColor="?attr/font_color_1"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_nav_timetable"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_timetable"
        app:layout_constraintStart_toStartOf="@id/btn_nav_timetable"
        app:layout_constraintTop_toBottomOf="@id/textview_label_timetable"
        tools:text="12"
        tools:textColor="@color/font_1_light" />

    <ImageButton
        android:id="@+id/btn_nav_all"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6.5dp"
        android:background="@drawable/bg_card_color_1_rd_8"
        android:contentDescription="@string/home_category_all"
        android:foreground="?selectableItemBackground"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_nav_today"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_nav_timetable"
        app:layout_constraintTop_toTopOf="@id/btn_nav_today" />

    <ImageView
        android:id="@+id/imageview_logo_all"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:background="@drawable/bg_home_category_logo_all"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_home_category_all"
        app:layout_constraintBottom_toTopOf="@id/textview_label_all"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_all"
        app:layout_constraintStart_toStartOf="@id/btn_nav_all"
        app:layout_constraintTop_toTopOf="@id/btn_nav_all"
        app:layout_constraintVertical_chainStyle="packed"
        app:tint="?attr/bg_1"
        tools:tint="@color/bg_1_light" />

    <TextView
        android:id="@+id/textview_label_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:importantForAccessibility="no"
        android:text="@string/home_category_all"
        android:textColor="?attr/font_color_2"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/textview_count_all"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_all"
        app:layout_constraintStart_toStartOf="@id/btn_nav_all"
        app:layout_constraintTop_toBottomOf="@id/imageview_logo_all"
        tools:textColor="@color/font_2_light" />

    <TextView
        android:id="@+id/textview_count_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/dangam_asac"
        android:importantForAccessibility="no"
        android:text="@string/home_category_today"
        android:textColor="?attr/font_color_1"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_nav_all"
        app:layout_constraintEnd_toEndOf="@id/btn_nav_all"
        app:layout_constraintStart_toStartOf="@id/btn_nav_all"
        app:layout_constraintTop_toBottomOf="@id/textview_label_all"
        tools:text="12"
        tools:textColor="@color/font_1_light" />

</androidx.constraintlayout.widget.ConstraintLayout>